--- a/_docs/2017-01-01-index.md
+++ b/_docs/2017-01-01-index.md
@@ -5,165 +5,88 @@ permalink: /introduction/
 group: base
 anchors:
   加密货币基础: 加密货币基础
-  卡尔达诺运算层为什么特别?: 卡尔达诺运算层为什么特别
-  Beyond Settlement Layer: beyond-settlement-layer
+  卡尔达诺清算层为什么特别?: 卡尔达诺清算层为什么特别
+  卡尔达诺清算层之上: 卡尔达诺清算层之上
 ---
 
 <!-- Reviewed at d0868afac50ba6ffcbd95054e65cbf77fa513082 -->
 
-Dear reader, the purpose of this documentation is to provide you with
-understanding of the first layer of Cardano Platform stack, the Settlement
-Layer. If you have an understanding of what Settlement Layer is, we suggest you
-first read [Differences Between the Paper and the
-Implementation](/cardano/differences/), and then move on to [documentation on
-protocols and implementation](/technical/protocols/csl-application-level/).
+亲爱的读者，本文档的目的是让您对于 Cardano 平台技术栈第一层即清算层有所了解。如果您理解了清算层是什么，我们建议您先阅读[论文和实现的差异](/cardano/differences/)，然后再阅读[协议和实现的文档](/technical/protocols/csl-application-level/)。
 
-This documentation targets IOHK developers, third party software developers,
-auditors, and consultants who collaborate on implementing Cardano Settlement
-Layer or use Cardano Settlement Layer reference implementation.
+本文档目标读者是 IOHK 的开发人员，第三方软件开发人员，审计和致力于实现卡尔达诺清算层或使用卡尔达诺清算层参考实现的咨询人员。
 
 <!-- CARDANO_SL_README_BEGIN_1 -->
-## 什么是卡尔达诺运算层?
+## 什么是卡尔达诺清算层?
 
-Cardano SL (or Cardano Settlement Layer) is a cryptographic currency designed
-and developed by [IOHK](https://iohk.io/team) in conjunction with the University
-of Edinburgh, the University of Athens and the University of Connecticut. Cardano
-SL is based on the Haskell implementation of the white paper
-["Ouroboros: A Provably Secure Proof of Stake Blockchain Protocol"](https://iohk.io/research/papers/#9BKRHCSI)
-by Aggelos Kiayias, Alexander Russell, Bernardo David and Roman Oliynykov.
+Cardano SL（或卡尔达诺运算层）是由 [IOHK](https://iohk.io/team) 联合爱丁堡大学，雅典大学和康涅狄格大学共同设计开发的一种加密货币。卡尔达诺运算层是基于 Aggelos Kiayias，Alexander Russell，Bernardo David 和 Roman Oliynykov 的白皮书 [『Ouroboros：可证明安全的权益证明协议』](https://iohk.io/research/papers/#9BKRHCSI)的 Haskell 实现。
 
-You can think of Cardano SL as Bitcoin reimagined with a freedom to fix Bitcoin’s
-design flaws. Please read ["What Makes Cardano SL Special?"](https://cardanodocs.com/introduction/#what-makes-cardano-sl-special)
-for more information about similarities and differences between Cardano SL and Bitcoin.
+您可以将卡尔达诺清算层视为基于比特币重新设计的针对比特币缺陷的自由修复。 有关卡尔达诺清算层和比特币之间的相似之处和差异的更多信息，请阅读[『卡尔达诺清算层为什么特别?』](http://cncardanodocs.com/introduction/#%E5%8D%A1%E5%B0%94%E8%BE%BE%E8%AF%BA%E8%BF%90%E7%AE%97%E5%B1%82%E4%B8%BA%E4%BB%80%E4%B9%88%E7%89%B9%E5%88%AB)。
+
+
 <!-- CARDANO_SL_README_END_1 -->
 
 ## 加密货币基础
 
-Before giving a definition of a cryptocurrency, let's talk about why we care
-about digital currencies in general and cryptographic currencies in particular.
 
-### 我们在意什么?
+在给出加密货币的定义之前，我们先来谈谈为什么我们在意数字货币，特别是加密货币。
+
+### 我们为什么在意?
 
 #### 速度
 
-As opposed to conventional (also known as fiat), centrally banked currencies,
-such as the Yen or the American Dollar, digital currencies do not require a
-banking system to move value. With this restriction lifted, working with digital
-currencies is much faster than working with banking, especially on a global
-scale. Transferring 10 USD from Osaka to Denver no longer takes days when a
-digital currency is used. All transactions are made rapidly regardless of the
-distance.
+与传统（也称为法定）中心银行货币，如人民币或美元相反，电子货币不需要一个银行系统来转移价值。这一限制的解除，使用数字货币的速度要快于银行业务，尤其是在全球范围内。使用数字货币从大阪转移10美元到丹佛不再需要数天的时间。无论距离如何，所有交易都能迅速完成。
+
 
 #### 你掌控你自己的钱
 
-All that a commercial bank account owner is given is a promise of being paid a
-certain amount of money within a reasonable amount of time after receiving a
-payout request. Banking systems also have limits to any volume of value being
-moved, rendering an individual unable to withdraw or transfer large amounts
-quickly. In case of cryptocurrencies, the person who holds a special kind of
-information called *a secret key* can spend the money at will. No other entity
-has a power to manipulate the value that a user owns.
+所有的商业银行账户所有者在收到支付请求后在合理的时间内只能支付一定的金额。银行体系对任何价值量都有限制，使个人无法迅速撤出或转移大量资金。有了加密货币的情况下，持有一种称为**密钥**这一特殊信息的人就可以随意花钱。没有其他实体有权操纵用户拥有的价值。
+
 
 #### 匿名
 
-One can have as many cryptocurrency addresses as they wish, receiving and
-spending money from different addresses as per their purpose. A merchant running
-an E-Commerce shop can have a set of addresses for receiving money and issuing
-refunds, and a separate personal "wallet" for their own needs. A single interface is used
-to control all of these wallets, and there is no need to log in to several
-payment platforms, which makes the process very time-efficient.
+人们可以根据需要，拥有任意多的加密货币地址，从不同的地址接收，消费资产。经营电子商务商店的商家可以拥有一组接收金钱和退款的地址，以及一个用于他们自身需要的单独的个人『钱包』。通过统一的接口控制所有这些钱包，并且不需要登录到多个支付平台，这使得该过程非常节省时间。
 
 #### 安全
 
-Your money is as secure as the *secret key* that allows spending it. This means
-that storing your secret key on a USB flash drive in a safe is equivalent to
-having banknotes in a safe. Absolutely nobody can steal this money even by
-carrying out a successful cyberattack.
+你的钱就像可用于消费的**密钥**一样安全。这意味着将密钥存储在保险箱中的 USB 闪存上相当于让纸币处于安全状态。即使进行了成功的网络攻击，也绝对没有人能够窃取这笔钱。
 
 #### 扩展性
 
-Using an approach known as [*side
-chains*](https://www.blockstream.com/sidechains.pdf), general purpose
-cryptocurrencies such as Cardano SL or Bitcoin can enable domain specific
-cryptocurrencies, such as Ethereum Classic. This way, any innovation developed
-via domain specific cryptocurrency can have participants who hold value in a
-general purpose cryptocurrency. Examples of such applications are identity
-management, gaming and gambling, and verifiable computations.
+使用一种称为[侧链](https://www.blockstream.com/sidechains.pdf)的方法，通用加密货币，如卡尔达诺清算层和比特币，就可以启用特定领域的加密货币，例如以太经典。这样依赖，通过特定领域的加密货币开发的任何创新产品都可以让参与者在通用的加密货币中保持价值。这样的应用程序的例子有身份管理，游戏和赌博，以及可验证计算。
+
 
 ### 什么是加密货币?
 
-Cryptocurrency is a form of digital currency that uses cryptography to
-manipulate value. Cryptography provides a way to generate proof of genuine
-authenticity of any kind of information. This is called *digital signing*. In
-cryptocurrencies we generate a ledger (a database which provides information on
-how much money each address has) by signing and sending transactions to the
-network and receiving blocks of confirmed transactions. Cryptocurrencies are
-normally decentralized, meaning that many people from all over the globe
-participate in ledger generation by running cryptocurrency nodes. Thus, a
-consensus about the state of the ledger has to be achieved. Two most significant
-approaches for achieving such consensus are discussed in the next section.
+加密货币是一种数字货币形式，使用密码来控制价值。密码学提供了一种生成任何类型信息的真实真实性证据的方法。这就是所谓的*数字签名*。在加密货币中，我们通过签署和发送交易到网络并接收已确认的交易块，生成一个总账（一个提供每个地址有多少钱的信息的数据库）。加密货币通常是分散的，这意味着来自全球各地的许多人通过运行加密货币节点参与总账的生成。因此，必须达成关于总账状况的共识。下一节讨论实现这种共识的两个最重要的方法。
+
 
 ## 卡尔达诺运算层为什么特别?
 
 <!-- v0.1.0.0 -->
 
-While there are similarities between Bitcoin and Cardano SL, there are also many
-differences between these two cryptocurrencies. The most significant difference
-is that Bitcoin is a proof of work type cryptocurrency, while Cardano SL makes
-use of a proof of stake approach to reach consensus. This encourages honesty and
-long term participation.
+虽然比特币和卡尔达诺清算层之间有相似之处，但这两个加密货币之间也有很多不同之处。最显着的区别是，比特币是工作量证明类型的加密货币，而卡尔达诺清算层使用权益证明的方法达成共识。这鼓励诚信和长期的参与。
 
-### Purpose of a Consensus Algorithm
 
-Consensus algorithms are used to produce new transaction blocks, resulting in an
-updated state of the ledger. Whenever someone publishes a block of transactions,
-they — or rather, their node that runs the cryptocurrency protocol — have to
-attach a proof that they have merited it. Below two types of such proofs are
-discussed.
+### 共识算法的目的
 
-### Proof of Work and Mining
 
-Proof of work is the most common consensus algorithm type for cryptocurrencies.
-It originated in Bitcoin, and this is how this cryptocurrency works. To generate
-proof of work, a computer has to solve a challenge. The challenge is a
-computationally heavy problem which is hard to solve, but the solution is easy
-to verify. When a computer on a proof of work based network finds a solution, it
-publishes it along with the transactions that the computer has been observing while
-cracking the problem. The owner of this computer collects the transaction fees
-and a reward for generating a block. The entire process is called *mining*.
-Mining is very energy consuming, and the amount of energy needed is constantly increasing,
-which can lead to unsound competition.
+共识算法被用来产生新的交易区块，使账本更新状态。每当有人发布一个交易区块时，他们（或者说他们的运行加密货币协议的节点）就必须附上他们已经证明的证据。下面讨论两种类型的证明。
 
-### Proof of Stake and Minting
 
-Proof of stake is a novel approach to block generation. IOHK scientists led by
-[Prof. Aggelos Kiayias](https://iohk.io/team/aggelos-kiayias/) have designed the
-first provably secure proof of stake algorithm called Ouroboros. Ouroboros lies
-at the heart of Cardano SL. Research team has published a
-[white paper](https://iohk.io/research/papers/a-provably-secure-proof-of-stake-blockchain-protocol/)
-that is a worthy read for anyone with a background in cryptocurrency theory. The
-core idea of proof of stake is that instead of wasting electricity on cracking
-computationally heavy problems, a node is selected to mint a new block, with a
-probability proportional to the amount of coins this node has. If a node
-has positive (&gt; 0) [stake](/cardano/proof-of-stake/#stake), it is called *a
-stakeholder*. If a node eventually becomes chosen to mint a block, it is called *a
-slot leader*. You can read more about this process in [Proof of Stake in Cardano
-SL](/cardano/proof-of-stake/).
+### 工作量证明和挖矿
+
+工作量证明是加密货币最普遍的共识算法类型。它起源于比特币，加密货币就是这么工作的。为了生成工作证明，计算机必须解决一个挑战。这是难以解决的计算繁重的问题，但解决方案很容易验证。当一台基于网络的工作量证明的计算机找到一个解决方案时，它会将交易发布于同它一起计算的其他计算机。这台计算机会因为产生区块得到交易费和奖励。整个过程被称为*挖矿*。挖矿是非常耗能的，所需的能源数量在不断增加，这可能导致不健康的竞争。
+
+### 权益证明和铸造
+
+权益证明是一种生成区块的新方法。由[教授Aggelos Kiayias](https://iohk.io/team/aggelos-kiayias/)领导的 IOHK 科学家们设计了第一个可证明的，称为 Ouroboros 的权益证明算法。Ouroboros 是卡尔达诺清算层的核心。研究小组已经发表了一篇[白皮书](https://iohk.io/research/papers/a-provably-secure-proof-of-stake-blockchain-protocol/) ，这封白皮书对于那些拥有加密货币理论背景的人来说是值得一读的。权益证明的核心思想是，不要浪费电力来解决计算繁重的问题，而是选择一个节点来铸造一个新的区块，其概率与这个节点的硬币数量成正比。如果一个节点有整数个(&gt; 0)的 [slot](/cardano/proof-of-stake/#stake)，它被称为 slot 所有人。如果一个节点最终被选中来铸造一个区块，那么这个节点被称为 slot leader。您可以在[卡尔达诺清算层的股权证明](/cardano/proof-of-stake/)中了解更多关于该流程的信息。
+
 
 <!-- CARDANO_SL_README_BEGIN_2 -->
-## Beyond Settlement Layer
+## 卡尔达诺清算层之上
 
-Cardano SL is called "Layer" for a reason. It is the first component of
-the Cardano Platform. Eventually, it will be expanded with a Control Layer,
-serving as a trusted computation framework to evaluate a special
-kind of proofs to ensure that a certain computation was carried out
-correctly. In gaming and gambling, such systems are used for
-verifying honesty of random number generation and game
-outcomes. Accompanied with side chains, it will make possible to accomplish
-such tasks as provably fair distribution of winnings in games. But the
-application of Control Layer lies well beyond gaming and gambling. Identity
-management, credit system and more will be a part of Cardano Platform.
-We are also aiming to evolve Daedalus, the Cardano SL [wallet application](https://github.com/input-output-hk/daedalus),
-into a universal cryptocurrency wallet featuring automated
-cryptocurrency trading and cryptocurrency-to-fiat transactions.
+
+卡尔达诺清算层被称为『层』是有原因的。这是卡尔达诺平台的第一个组件。最终，它将被扩展到一个控制层，作为一个可信的计算框架来评估一种特殊的证明，以确保一定的计算正确执行。在游戏和赌博中，这样的系统被用于验证随机数生成和游戏结果的真实性。伴随着侧链，它将有可能完成诸如在游戏中公平分配奖金的任务。但是控制层的应用远远超出了游戏和赌博。身份管理，信用系统等将成为卡尔达诺平台的一部分。我们将迭代卡尔达诺[钱包应用程序 Daedalus](https://github.com/input-output-hk/daedalus)，使其变成一个具有自动加密货币交易和合法加密货币交易功能的通用加密货币钱包。
+
+
 <!-- CARDANO_SL_README_END_2 -->
