--- a/_docs/cardano/2017-01-19-topology.md
+++ b/_docs/cardano/2017-01-19-topology.md
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: Topology
+title: 拓扑
 permalink: /cardano/topology/
 group: cardano
 ---
 <!-- Reviewed at ba744590c89d8ffa6d6f0919ec11f52202a6d8f2 -->
 
-# Cardano SL Network Topology
+# 卡尔达诺清算层网络拓扑
 
 This is an overview of Cardano SL network topology.
 
