--- a/_docs/technical/2017-01-04-updater.md
+++ b/_docs/technical/2017-01-04-updater.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Cardano SL Updater
+title: 卡尔达诺清算层 Updater
 permalink: /technical/updater/
 group: technical
 visible: true
