--- a/_docs/technical/2017-01-06-explorer.md
+++ b/_docs/technical/2017-01-06-explorer.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Cardano SL Explorer
+title: 卡尔达诺清算层浏览器
 permalink: /technical/explorer/
 group: technical
 visible: true
