--- a/_docs/technical/plutus/2017-01-02-types.md
+++ b/_docs/technical/plutus/2017-01-02-types.md
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: Types
+title: 类型
 permalink: /technical/plutus/types/
 group: technical-plutus
 ---
 <!-- Reviewed at 25dc86c0fd9741b2f1c59d3a594c48844bbc73f5 -->
 
-# Plutus Types
+# Plutus 类型
 
 This chapter contains a reference for the types in the Plutus language. It uses
 some informal type theory, which hopefully is understandable to everyone reading
