--- a/_docs/technical/protocols/2017-01-13-binary.md
+++ b/_docs/technical/protocols/2017-01-13-binary.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Binary protocols
+title: 二进制协议
 permalink: /technical/protocols/binary-protocols/
 group: technical-protocols
 ---
