--- a/_docs/technical/2017-01-02-launcher.md
+++ b/_docs/technical/2017-01-02-launcher.md
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: Cardano SL Launcher
+title: 卡尔达诺清算层 Launcher
 permalink: /technical/launcher/
 group: technical
 visible: true
 ---
 <!-- Reviewed at ac0126b2753f1f5ca6fbfb555783fbeb1aa141bd -->
 
-# Cardano SL Launcher
+# 卡尔达诺清算层 Launcher
 
 ## Overview
 
