--- a/_docs/technical/plutus/2017-01-03-examples.md
+++ b/_docs/technical/plutus/2017-01-03-examples.md
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: Examples
+title: 例子
 permalink: /technical/plutus/examples/
 group: technical-plutus
 ---
 <!-- Reviewed at 25dc86c0fd9741b2f1c59d3a594c48844bbc73f5 -->
 
-# Plutus Examples
+# Plutus 例子
 
 Here we'll take a look at some of the common examples of programs to give you a
 better feel of how the Plutus language works. We'll implement Peano numerals,
