--- a/_docs/technical/2017-01-04-updater.md
+++ b/_docs/technical/2017-01-04-updater.md
@@ -11,163 +11,92 @@ visible: true
 
 # 卡尔达诺结算层更新器概览
 
+更细系统的实现可以从 [Pos.Update](https://github.com/input-output-hk/cardano-sl/tree/6b5eda44e5942599a9781e5ad3f51eb820665b83/src/Pos/Update) 系列模块中找到。实现的方法与 CSL 的其他子系统相同，比如 Txp, Ssc 和委派。更新系统有一个全局状态，存储在数据库中。全局状态可以从区块链中明确导出。本地状态，有时候也被称为『内存池』，被存储在内存中。内存池用于数据传输，将传输的数据保存到区块中。在[二进制文档](/technical/protocols/binary-protocols/)中描述的二进制协议在[应用级文档](/technical/protocols/csl-application-level/)中描述了网络协议（使用标准的 [Inv/Req/Data
+pattern](https://github.com/input-output-hk/cardano-sl/tree/43a2d079a026b90ba860e79b5be52d1337e26c6f/infra/Pos/Communication/Relay) 模式构建)。
+
+目前，通过软件更新，执行研究部分所述的硬分叉来增加硬分叉的功能已经准备好了；软分叉（或者说软件更新）已经完全实现。
 
 
-Implementation of the update system can be found in the
-[Pos.Update](https://github.com/input-output-hk/cardano-sl/tree/6b5eda44e5942599a9781e5ad3f51eb820665b83/src/Pos/Update)
-family of modules. The general approach to implementation is the same as in
-other subsystems of CSL, such as Txp, Ssc and Delegation. The update system has
-the global state, stored in the database. The global state can be unambiguously
-derived from the information that is in the blockchain. The local state,
-sometimes referred to as “mempool”, is stored in the memory. The mempool is used
-for data transfer and inclusion of transferred data into blocks. The network
-protocol (built with standard [Inv/Req/Data
-pattern](https://github.com/input-output-hk/cardano-sl/tree/43a2d079a026b90ba860e79b5be52d1337e26c6f/infra/Pos/Communication/Relay))
-is described in [Application-level
-document](/technical/protocols/csl-application-level/) with the binary protocol
-described in [Binary protocols
-document](/technical/protocols/binary-protocols/).
+## 软分叉可更新字段
 
-Currently, everything is ready to add hard fork functionality via software
-update and then perform a hard fork as described in research section; soft forks
-(or software updates) are fully implemented.
+一个 [UpdateProposal](https://github.com/input-output-hk/cardano-sl/blob/43a2d079a026b90ba860e79b5be52d1337e26c6f/update/Pos/Update/Core/Types.hs#L110) 包含用于修改由卡尔达诺结算层使用的一些参数（例如 slot 持续时间）的字段。具体来说，`upBlockVersion` 用于提议协议有了一些修改；如果 `upBlockVersion` 比上一次使用的区块还新，`upBlockVersionData` 的修改就会被采用。
 
-## Fields Updatable with a Soft Fork
+`upBlockVersionData` 具有 [BlockVersionData](https://github.com/input-output-hk/cardano-sl/blob/fe5e6a377ab63c506173545fd4d8633cd1afbdc6/core/Pos/Core/Types.hs#L206) 的类型。
 
-An
-[UpdateProposal](https://github.com/input-output-hk/cardano-sl/blob/43a2d079a026b90ba860e79b5be52d1337e26c6f/update/Pos/Update/Core/Types.hs#L110)
-contains fields for changing some parameters used by Cardano SL (for instance,
-slot duration). Specifically, `upBlockVersion` is used to signify that a
-proposal performs such changes; if `upBlockVersion` is greater than the last
-used block version, the changes from `upBlockVersionData` will be applied.
+这些字段如下所述：
 
-`upBlockVersionData` has the type
-[BlockVersionData](https://github.com/input-output-hk/cardano-sl/blob/fe5e6a377ab63c506173545fd4d8633cd1afbdc6/core/Pos/Core/Types.hs#L206).
+- `bvdScriptVersion` - 用于验证脚本转账的脚本语言版本，如果协议中 `upBlockVersion` 增加了，它必须也给增加 `upBlockVersion` 1（不能保持不变）
+- `bvdSlotDuration` - slot 持续时间（以毫秒为单位）
+- `bvdMaxBlockSize` - 区块大小限制（以字节为单位）。与上一个限制相比而言，协议不能将区块的大小限制增加两倍以上。
+- `bvdMaxHeaderSize` - 区块大小限制（以字节为单位）
+- `bvdMaxTxSize` - 转账大小限制（以字节为单位，[当前为4096字节](https://github.com/input-output-hk/cardano-sl/blob/43a2d079a026b90ba860e79b5be52d1337e26c6f/core/constants.yaml#L17))，限制 [TxAux](/technical/protocols/binary-protocols/#transaction-auxilary) 的大小。
 
-Its fields are described below:
 
--   `bvdScriptVersion` – a script language version used to validate script
-    transactions. If the proposal increases `upBlockVersion`, it must also
-    increase `bvdScriptVersion` by 1 (and can't leave it unchanged).
--   `bvdSlotDuration` – slot duration (in milliseconds).
--   `bvdMaxBlockSize` – block size limit (in bytes). A proposal can't increase
-    the block size limit more than twofold compared to the previous limit.
--   `bvdMaxHeaderSize` - block header size limit (in bytes).
--   `bvdMaxTxSize` – transaction size limit (in bytes, [currently
-    4096](https://github.com/input-output-hk/cardano-sl/blob/43a2d079a026b90ba860e79b5be52d1337e26c6f/core/constants.yaml#L17)),
-    limits size of
-    [TxAux](/technical/protocols/binary-protocols/#transaction-auxilary)
+这些检查在 [verifyNextBVData](https://github.com/input-output-hk/cardano-sl/blob/893e3c838bf847613313e8dbf04330176a788af4/update/Pos/Update/Poll/Logic/Base.hs#L232) 中进行。
 
-The checks described above are made in
-[verifyNextBVData](https://github.com/input-output-hk/cardano-sl/blob/893e3c838bf847613313e8dbf04330176a788af4/update/Pos/Update/Poll/Logic/Base.hs#L232).
 
-In addition, there are some fields that are unused right now, but will be used
-in the future. Their meaning is briefly described below:
+此外，有一些现在未被使用，但将来会被使用的字段。以下是它们的简要说明：
 
--   `bvdMpcThd` – eligibility threshold for MPC.
--   `bvdHeavyDelThd` – threshold for heavyweight delegation.
--   `bvdUpdateVoteThd` – portion of total stake necessary to vote for or against
-    an update.
--   `bvdUpdateProposalThd` – portion of total stake such that block containing
-    `UpdateProposal` must contain positive votes for this proposal from
-    stakeholders owning at least this amount of stake.
--   `bvdUpdateImplicit` – number of slots after which an update is implicitly
-    approved (unless it has more negative votes than positive).
--   `bvdUpdateSoftforkThd` – portion of total stake such that if total stake of
-    issuers of blocks with some block version is bigger than this portion, this
-    block version is adopted.
+- `bvdMpcThd` MPC 的资格临界值。
+- `bvdHeavyDelThd` 重量级委派的临界值。
+- `bvdUpdateVoteThd` 投赞成票和反对更新所需的股份份额。
+- `bvdUpdateProposalThd` 所有股份的一个份额，要让区块拥有 `UpdateProposal`，权益所有人的投票份额必须大于这一份额。
+- `bvdUpdateImplicit` 静默更新之后的 slot 数（除非它有更多的否定票数）。
+- `bvdUpdateSoftforkThd` 所有股份的一个份额，如果某些区块权益所有人的总持股比例比该数值大，则采用该区块版本。
 
-## Mempool Structure
+## 内存池结构
 
-[`MemPool`](https://github.com/input-output-hk/cardano-sl/blob/43a2d079a026b90ba860e79b5be52d1337e26c6f/update/Pos/Update/MemState/Types.hs#L29) consists of votes and proposals. Apart from that [`MemState`](https://github.com/input-output-hk/cardano-sl/blob/43a2d079a026b90ba860e79b5be52d1337e26c6f/update/Pos/Update/MemState/Types.hs#L39) contains
-tip, slot and `PollModifier` corresponding to `MemPool` (and to current
-`GState`, i. e. to application of `MemPool` to `GState`). No matter whether a
-change in proposal state comes from the network/mempool, or from loading the
-blockchain, `PollModifier` represents modification of global state which will be
-made if one applies mempool.
+[`内存池`](https://github.com/input-output-hk/cardano-sl/blob/43a2d079a026b90ba860e79b5be52d1337e26c6f/update/Pos/Update/MemState/Types.hs#L29) 由投票和提案组成。除此以外，[`内存池`](https://github.com/input-output-hk/cardano-sl/blob/43a2d079a026b90ba860e79b5be52d1337e26c6f/update/Pos/Update/MemState/Types.hs#L39) 还包含 tip，slot 以及 `MemPool` 对应的 `PollModifier`（当前 `GState`，即应用的 `MemPool` 对应 `GState`）。无论是来自网络/内存池提案状态改变，还是来自区块链加载的提案状态改变，`PollModifier` 都表示全局状态的改变，会被应用到内存池。
 
-### Updating the Mempool
 
-As nodes deserialize [payloads of update system
-messages](/technical/protocols/binary-protocols/#update-system), they modify
-mempool as implemented
-[here](https://github.com/input-output-hk/cardano-sl/blob/43a2d079a026b90ba860e79b5be52d1337e26c6f/update/Pos/Update/MemState/Functions.hs#L35).
+### 更新内存池
 
-`MemPool` is updated in three cases:
+随着节点反序列化[更新系统消息的数据](/technical/protocols/binary-protocols/#update-system)，内存池会被更新，实现在[这里](https://github.com/input-output-hk/cardano-sl/blob/43a2d079a026b90ba860e79b5be52d1337e26c6f/update/Pos/Update/MemState/Functions.hs#L35)。
 
-1.  **When a new proposal/vote is received**. In this case, one of the
-    [process](https://github.com/input-output-hk/cardano-sl/blob/763822c4fd906f36fa97b6b1f973d31d52342f3f/update/Pos/Update/Logic/Local.hs#L186)
-    functions is called, which in turn calls
-    [`verifyAndApplyUSPayload`](https://github.com/input-output-hk/cardano-sl/blob/dff5e00612c84af24964a98e5254602fa4f7fc17/update/Pos/Update/Poll/Logic/Apply.hs#L66)
-    and then updates current `PollModifier` and `MemPool`.
-2.  **When a new slot starts**. In this case some data in `MemPool` may become
-    invalid. In fact, it happens only when epoch changes. That can happen
-    because stable stake distribution changes and some votes may have not enough
-    stake for inclusion. It's done in the
-    [`processNewSlot`](https://github.com/input-output-hk/cardano-sl/blob/763822c4fd906f36fa97b6b1f973d31d52342f3f/update/Pos/Update/Logic/Local.hs#L283)
-    function.
-3.  **When `GState` is updated**. It is called
-    [`usNormalize`](https://github.com/input-output-hk/cardano-sl/blob/763822c4fd906f36fa97b6b1f973d31d52342f3f/update/Pos/Update/Logic/Local.hs#L248).
-    Some data may become invalid as a result of block(s) application or
-    rollback. For instance, we have a proposal in memory, apply block with this
-    proposal and it becomes invalid (because it's already in block). We should
-    drop such proposals. Or we have a vote for proposal from some block, then
-    rollback of this block happens and vote is no longer valid. It is
-    implemented by applying all local data to empty state, ignoring all data
-    which is no longer valid.
 
-### Proposal and Votes Accumulation
 
-To vote for a proposal, nodes should send their
-[votes](https://github.com/input-output-hk/cardano-sl/blob/04dc8e4a640a62f0d82633f3a78ab3d8540fd5e6/update/Pos/Update/Core/Types.hs#L255).
-Proposals and votes are stored in mempool (even if proposals don't have enough
-votes for inclusion into blocks, this way votes can be collected automatically)
-or gathered from the blockchain in order to figure out which proposal is
-adopted.
+`MemPool` 在三种情况下会被更新：
 
-## Interaction With the Database
+1. **当收到新的提案/表决时**。在这种情况下，调用一个[处理函数](https://github.com/input-output-hk/cardano-sl/blob/763822c4fd906f36fa97b6b1f973d31d52342f3f/update/Pos/Update/Logic/Local.hs#L186)，然后调用 [`verifyAndApplyUSPayload`](https://github.com/input-output-hk/cardano-sl/blob/dff5e00612c84af24964a98e5254602fa4f7fc17/update/Pos/Update/Poll/Logic/Apply.hs#L66) 并更新当前 `PollModifier` 和 `MemPool`。  
 
-In order to verify update system data, we have to get this data from the global
-state (database). To provide such interface, a well-documented type class
-[`MonadPollRead`](https://github.com/input-output-hk/cardano-sl/blob/446444070ee09857603797a90af970fff215c8c5/update/Pos/Update/Poll/Class.hs#L29)
-is presented. This type class is used not only for DB interaction, but also to
-take mempool into account when the data received from the network are processed.
-It is important that its implementation relies on functions found in
-[`Pos.Update.DB`](https://github.com/input-output-hk/cardano-sl/blob/04dc8e4a640a62f0d82633f3a78ab3d8540fd5e6/update/Pos/Update/DB.hs) module.
+2. **当一个新 slot 开始时**。在这种情况下，一些内存池的数据可能会失效。事实上，只有 epoch 发生变化时才会发生这种情况。这种情况可能会发生是因为稳定的股份分配发生了变化，有些投票可能没有足够的股份。这是 [`processNewSlot`](https://github.com/input-output-hk/cardano-sl/blob/763822c4fd906f36fa97b6b1f973d31d52342f3f/update/Pos/Update/Logic/Local.hs#L283) 方法实现的。
 
-## Core Types
+3. **当 `GState` 更新时**。它被称为 [`usNormalize`](https://github.com/input-output-hk/cardano-sl/blob/763822c4fd906f36fa97b6b1f973d31d52342f3f/update/Pos/Update/Logic/Local.hs#L248)。有些数据可能由于区块应用程序或回滚而变得无效。例如，我们在内存中有个提案，将这个提案应用于区块，然后它变无效了（因为它已经在区块中）。我们应该放弃这个提案。或者我们从某个区块对提案进行投票，然后回滚这个区块，然后投票变得无效。它通过将所有本地数据应用于空状态来实现的，忽略所有不再有效的数据。
 
-Core types are mentioned in the [Binary Protocols](/technical/protocols/binary-protocols/)
-document. Those types reflect the concepts from the research section in a straightforward way.
-Please refer to the [core types
-module](https://github.com/input-output-hk/cardano-sl/blob/04dc8e4a640a62f0d82633f3a78ab3d8540fd5e6/update/Pos/Update/Core/Types.hs)
-for more information.
+### 提案和投票累计
 
-## Update Proposal Approval
+要为提案投票，节点应该发送它们的[投票](https://github.com/input-output-hk/cardano-sl/blob/04dc8e4a640a62f0d82633f3a78ab3d8540fd5e6/update/Pos/Update/Core/Types.hs#L255)。提案和投票存储在内存池（即使没有足够的选票加入区块，这种方式也可以自动收集投票），或者从区块链收集，以确定哪个方案通过。
 
-A very important part of implementation of the update mechanism is the part that
-works with genesis blocks for epochs. This logic resides in
-[`processGenesisBlock`](https://github.com/input-output-hk/cardano-sl/blob/6b5eda44e5942599a9781e5ad3f51eb820665b83/src/Pos/Update/Poll/Logic/Softfork.hs#L68) function.
-The terminology related to this process is explained below.
 
-### Threshold
+## 与数据库的交互
 
-Suppose there is a block version `X`. And there are blocks with version `X`
-created in slots `S` (where `S` is a set of slots). If total relative stake of
-leaders of all slots in `S` is ≥ `softforkResolutionThreshold` (referred to as
-«threshold» in the code), then `X` becomes adopted. See the more detailed
-description in [research overview](/cardano/update-mechanism/#soft-fork-updates).
+为了验证更新系统数据，我们必须从全局状态（数据库）获取这些数据。有一个文档详实的类型类 [`MonadPollRead`](https://github.com/input-output-hk/cardano-sl/blob/446444070ee09857603797a90af970fff215c8c5/update/Pos/Update/Poll/Class.hs#L29) 提供这样的接口。这种类型不但用于数据库交互，还用于在处理从网络接收到的数据时将内存池写入账户。非常重要的一点是，它的实现依赖于 [`Pos.Update.DB`](https://github.com/input-output-hk/cardano-sl/blob/04dc8e4a640a62f0d82633f3a78ab3d8540fd5e6/update/Pos/Update/DB.hs) 模块中的函数。
 
-### Proposal states
 
-Update proposal can be in one of the states described below.
+## 核心类型
 
-#### Undecided
+核心类型在[二进制协议](/technical/protocols/binary-protocols/)文档中提到。这些类型直接反映了研究章节的概念，有关更多信息，请参阅[核心类型模块](https://github.com/input-output-hk/cardano-sl/blob/04dc8e4a640a62f0d82633f3a78ab3d8540fd5e6/update/Pos/Update/Core/Types.hs)
 
-It means that update proposal is contained in one of the blocks, but it doesn't
-have `50%` votes for/against it (here `50%` means total stake of voters who are
-for/against proposal relative to total stake of all stakeholders in system) and
-implicit agreement rule hasn't been triggered yet.
+
+## 更新提案批准
+
+更新机制实现的一个很重要的部分是创始块的部分。这个逻辑在 [`processGenesisBlock`](https://github.com/input-output-hk/cardano-sl/blob/6b5eda44e5942599a9781e5ad3f51eb820665b83/src/Pos/Update/Poll/Logic/Softfork.hs#L68) 中。下面将解释与该过程有关的术语。
+
+
+### 阈值
+
+假设有一个区块版本 `X`。以及在 slots `S` 中创建的版本为 `X` 的区块（其中 `S` 是一组 slots）。如果所有 slot 的领导者的总相对资产 `S` ≥ `softforkResolutionThreshold` (在代码中被称为阈值)，则 `X` 被采纳。请参阅[研究概述](/cardano/update-mechanism/#soft-fork-updates)获取更详细说明。
+
+
+### 提案状态
+
+更新的提案状态可处于下面的状态之一。
+
+
+#### 未定
+
+这意味着更新提案被包含在其中一个区块中，但是它没有 `50%` 的赞成/反对票（这里的 `50%` 的意义是赞成/反对提案选民总数相对于系统所有权益相关者的总股权），默认赞同规则还没有触发。
+
 
 <!-- TODO: **Important remark:** when we are talking about stake, we need to be clear about
 which stake distribution we are talking about. For each epoch we know stable distribution
@@ -184,50 +113,33 @@ that Alice's funds belong to Bob or Alice? When we use stake for votes, we consi
 stake, i. e. we consider that Alice's funds belong to Bob. Note that here we consider
 only heavyweight delegation. I hope it's covered in documentation, but I am not sure. -->
 
-#### Approved
+#### 批准
 
-It means that proposal has more than `50%` votes for it or it was added to block
-long ago (according to implicit agreement rule) and it has more positive votes
-than negative (comparison by stake of course).
+这意味着这个提案有超过 `50%` 的投票或很久之前加入了区块（根据默认批准规则），赞同的票数比反对的票数更多（与股权比较）
 
-#### Rejected
 
-A proposal is called **rejected** if that proposal has more than `50%` votes
-against it or it was added to block long ago (according to implicit agreement
-rule) and it has more negative votes than positive (again, comparison by stake).
+#### 拒绝
 
-#### Confirmed
+如果反对该提案的投票超过 `50%`，或很久之前加入了区块（根据默认批准规则），反对的票数比赞同的票数更多（再次与股权比较）。
 
-An **approved** proposal is called **confirmed** if at least `k` blocks ago
-proposal became **Approved**. At this point we can be sure that proposal won't
-become **rejected**, because rollbacks with depth more than `k` aren't possible.
+#### 确认
 
-#### Discarded
+如果至少 `k` 个区块提案通过，那么这个**批准**的提案被称为**确认**。这时候我们可以确定该提案不会被拒绝。因为深度超过 `k` 的回滚是不可能的。
 
-A **rejected** proposal is called **discarded**, if at least `k` blocks ago that
-proposal became **rejected**. At this point we can be sure that proposal won't
-be approved, because rollbacks with depth more than `k` aren't possible.
+#### 废弃
 
-## Download New Version
+如果至少 `k` 个区块提案未通过，那么这个**拒绝**的提案被**废弃**。这时候我们可以确定该提案不会被通过。因为深度超过 `k` 的回滚是不可能的。
 
-In the
-[`Pos.Update.Download`](https://github.com/input-output-hk/cardano-sl/blob/04dc8e4a640a62f0d82633f3a78ab3d8540fd5e6/src/Pos/Update/Download.hs)
-module, the following algorithms are implemented. Downloaded updates are applied
-using a tool called
-[`cardano-launcher`](https://github.com/input-output-hk/cardano-sl/blob/82ba83c3ffb670201b309ff47e3d0ab5f4a17455/src/launcher/Main.hs).
+## 下载新版本
 
-### Download Confirmed Update
+在 [`Pos.Update.Download`](https://github.com/input-output-hk/cardano-sl/blob/04dc8e4a640a62f0d82633f3a78ab3d8540fd5e6/src/Pos/Update/Download.hs) 模块中，实现了以下算法。已下载的更新通过一个叫做 [`cardano-launcher`](https://github.com/input-output-hk/cardano-sl/blob/82ba83c3ffb670201b309ff47e3d0ab5f4a17455/src/launcher/Main.hs) 的工具应用。
 
-To download a confirmed update, we extract the update hash from
-[`ConfirmedProposalState`](https://github.com/input-output-hk/cardano-sl/blob/04dc8e4a640a62f0d82633f3a78ab3d8540fd5e6/update/Pos/Update/Poll/Types.hs#L114). It is extracted depending on whether or not we're
-using an installer on given platform. If the update hash is extracted
-successfully, the “Download Update by Hash” algorithm is invoked to download and
-save the confirmed update.
 
-### Download Update by Hash
+### 下载更新的版本
 
-To [download an update by hash](https://github.com/input-output-hk/cardano-sl/blob/daa8b81785f38038187c45385c9a94510a5c3780/src/Pos/Update/Download.hs#L108), we loop through known update servers trying to
-download the update with given hash using `httpLBS` from HTTP. It's simple: in
-the end, we will either have the update completely downloaded or server list
-exhausted and an error reported. URIs of the known update servers are defined
-using `--update-server` argument of the `cardano-node` executable.
+要下载更新的版本，我们从 [`ConfirmedProposalState`](https://github.com/input-output-hk/cardano-sl/blob/04dc8e4a640a62f0d82633f3a78ab3d8540fd5e6/update/Pos/Update/Poll/Types.hs#L114) 提取更新的哈希值。如果更新哈希值成功提取了，则调用『下载更新哈希值』算法以下载保存更新的版本，这取决于我们是否在给定的平台使用安装程序。
+
+### 通过哈希值下载更新
+
+为了[通过哈希值下载更新](https://github.com/input-output-hk/cardano-sl/blob/daa8b81785f38038187c45385c9a94510a5c3780/src/Pos/Update/Download.hs#L108)，我们会使用 HTTP 中的 `httpLBS`，遍历已知的更新服务器，用给定的哈希值下载更新。很简单：最后，我们要么完成了更新的下载，要么遍历完服务器清单，上报错误信息。已知更新服务器的 URI 使用 `cardano-node` 可执行文件的 `--update-server` 参数定义。
+
