Technical explorer ready

--- a/_docs/technical/2017-01-06-explorer.md
+++ b/_docs/technical/2017-01-06-explorer.md
@@ -7,55 +7,40 @@ visible: true
 ---
 <!-- Reviewed at ac0126b2753f1f5ca6fbfb555783fbeb1aa141bd -->
 
-# Cardano SL Explorer
+# 卡尔达诺结算层浏览器
+
+正如之前提到的，浏览器是一个搜索卡尔达诺结算层[转账](/glossary/#转账)，[地址](/glossary/#address)，时间区间（[epochs](/glossary/#epoch) 和 [slots](/glossary/#slot)）信息的服务，
 
 As [mentioned earlier](/cardano/explorer), Explorer is a service for searching
 information about [transactions](/glossary/#transaction),
 [addresses](/glossary/#address) and time periods ([epochs](/glossary/#epoch) and
 [slots](/glossary/#slot)) in the Cardano network.
 
-## Explorer Backend Workflow
+## 浏览器后端工作流
 
-Explorer starts with
-[CLI-options](https://github.com/input-output-hk/cardano-sl-explorer/blob/f64fb137415c03e8569129067a7798bb8a51456c/src/explorer/ExplorerOptions.hs#L25).
-All supported options can be viewed by `cardano-explorer --help` command.
 
-Then explorer [runs "internal"
-node](https://github.com/input-output-hk/cardano-sl-explorer/blob/f64fb137415c03e8569129067a7798bb8a51456c/src/explorer/Main.hs#L74)
-via `cardano-sl` library. So we can think of explorer's backend as of a common
-node with [two special
-plugins](https://github.com/input-output-hk/cardano-sl-explorer/blob/f64fb137415c03e8569129067a7798bb8a51456c/src/explorer/Main.hs#L70):
-`explorerPlugin` and `notifierPlugin`.
+浏览器利用[命令行参数](https://github.com/input-output-hk/cardano-sl-explorer/blob/f64fb137415c03e8569129067a7798bb8a51456c/src/explorer/ExplorerOptions.hs#L25)选项启动。所有支持的选项都可以通过 `cardano-explorer --help` 命令查看。
 
-The first plugin is for serving [explorer web
-API](https://github.com/input-output-hk/cardano-sl-explorer/blob/e343db1def575cc2a47d9168414c22c2599c50e6/src/Pos/Explorer/Web/Api.hs#L25).
-The second one [starts notification
-server](https://github.com/input-output-hk/cardano-sl-explorer/blob/e343db1def575cc2a47d9168414c22c2599c50e6/src/Pos/Explorer/Socket/App.hs#L164).
-This websocket-based server notifies frontend about changes with
-blocks/transactions.
+然后，浏览器通过 `cardano-sl` 库运行『[内部节点](https://github.com/input-output-hk/cardano-sl-explorer/blob/f64fb137415c03e8569129067a7798bb8a51456c/src/explorer/Main.hs#L74)』。因此我们可以把浏览器当做有着两个[特殊插件](https://github.com/input-output-hk/cardano-sl-explorer/blob/f64fb137415c03e8569129067a7798bb8a51456c/src/explorer/Main.hs#L70) `explorerPlugin`, `notifierPlugin` 的普通节点。
 
-## Explorer Backend API
+第一个插件用于[浏览器 web API](https://github.com/input-output-hk/cardano-sl-explorer/blob/e343db1def575cc2a47d9168414c22c2599c50e6/src/Pos/Explorer/Web/Api.hs#L25)，第二个启动[通知服务器](https://github.com/input-output-hk/cardano-sl-explorer/blob/e343db1def575cc2a47d9168414c22c2599c50e6/src/Pos/Explorer/Socket/App.hs#L164)，这个机遇 websocket 的服务器通知前端关于区块/转账的修改。
 
-Currently, the explorer web API provides a series of methods to obtain
-information from the Cardano network. The `servant` Haskell library that
-provides a modular approach to API-building is used. This library uses
-combinators both to build atomic HTTP actions and to glue these atomic methods
-together to form larger and more complete APIs.
+
+## 浏览器后端 API
+
+目前，浏览器后端 Web API 提供了一系列从卡尔达诺网络获取信息的方法。`servant` 库提供了很多构建 API 的方法模块。该库使用组合器来构建 HTTP 原子操作，并将这些原子方法组合在一起形成更大，更完整的 API。
 
 ### HTTP API
 
-Explorer web API is defined
-[here](https://github.com/input-output-hk/cardano-sl-explorer/blob/f64fb137415c03e8569129067a7798bb8a51456c/src/Pos/Explorer/Web/Api.hs#L25).
-If the event requests fail, there is a
-[`ExplorerError`](https://github.com/input-output-hk/cardano-sl-explorer/blob/f64fb137415c03e8569129067a7798bb8a51456c/src/Pos/Explorer/Web/Error.hs#L11)
-type, which is simply a wrapper over `Text` to show what happened.
+浏览器 web api 在 [这里](https://github.com/input-output-hk/cardano-sl-explorer/blob/f64fb137415c03e8569129067a7798bb8a51456c/src/Pos/Explorer/Web/Api.hs#L25)定义。如果事件请求失败，则有一个 [`ExplorerError`](https://github.com/input-output-hk/cardano-sl-explorer/blob/f64fb137415c03e8569129067a7798bb8a51456c/src/Pos/Explorer/Web/Error.hs#L11) 类型，它简单地封装在 `Text` 里面，以显示发生了什么。
 
-Documentation for explorer web API is available
-[here](https://cardanodocs.com/technical/explorer/api/).
+浏览器 Web API 的文档可以在[这里](https://cardanodocs.com/technical/explorer/api/)找到.
+
 
 ### socket.io API
 
-We currently have these events a client can register to:
+目前我们有这些事件客户可以订阅到：
+
 
 ``` haskell
 data ClientEvent
@@ -64,7 +49,7 @@ data ClientEvent
     | CallMe
 ```
 
-A subscription can be to the following events:
+订阅可以是以下事件：
 
 ``` haskell
 data Subscription
@@ -73,7 +58,7 @@ data Subscription
     | SubTx
 ```
 
-And the coresponding server events are here:
+相应的服务器事件是：
 
 ``` haskell
 data ServerEvent
@@ -83,7 +68,8 @@ data ServerEvent
     | CallYou
 ```
 
-A user can call the desired events and subscribe to them:
+
+用户可以调用所需的事件并订阅它们：
 
 ``` js
 var client = require('socket.io-client');
@@ -93,8 +79,8 @@ socket.on('CallYou', function(msg){ console.log(msg); })
 socket.emit('CallMe', 'test');
 ```
 
-You can also try running purescript repl (`pulp psci`) and then playing around
-with the events:
+你也可以尝试运行 purescript repl（`pulp psci` ），尝试一下事件：
+
 
 ``` purescript
 import Prelude
