fix: Google analytics

--- a/_docs/technical/protocols/2017-01-13-binary.md
+++ b/_docs/technical/protocols/2017-01-13-binary.md
@@ -7,9 +7,9 @@ group: technical-protocols
 <!-- Reviewed at 721474b760466b888cf26545b52b35989b2162de -->
 <!-- Delegation : Updated at 15b8b777fde5a8ab4a85af71affeffdf31ad219c -->
 
-# Binary Protocols
+# 二进制协议
 
-<span style="color: red;">**IMPORTANT: BINARY PROTOCOLS WILL BE CHANGED SOON.**</span>
+<span style="color: red;">**重要提示：二进制协议即将更改。**</span>
 
 Sizes of all fields are represented in bytes. Big-Endian is used everywhere.
 Composite types are serialized in the order of definition with no delimiters.
